--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap');
+
+*{
+  font-family: "Cinzel", serif !important;
+}
+
 html,
 body {
   height: 100%;
